# hypertube

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  insomnia_oauth2_api.json  pyproject.toml
aria2c/: Dockerfile
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_initial_schema.down.sql  20240101000001_initial_schema.up.sql  20240101000002_movie_details.down.sql  20240101000002_movie_details.up.sql  20240101000003_stream.down.sql  20240101000003_stream.up.sql  20240101000004_ffmpeg_conversion.down.sql  20240101000004_ffmpeg_conversion.up.sql
backend/src/: jwt.rs  main.rs
backend/src/routes/: auth.rs  cleanup.rs  mod.rs  movies.rs  oauth2_server.rs  oauth42.rs  oauth_google.rs  password_reset.rs  search.rs  stream.rs  subtitles.rs  users.rs
docs/: INSOMNIA_OAUTH2.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: i18n.ts  main.tsx
frontend/src/components/: Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/locales/: en.json  pt.json
frontend/src/pages/: AuthCallback.tsx  ForgotPassword.tsx  Login.tsx  MovieDetails.tsx  Profile.tsx  Register.tsx  ResetPassword.tsx  Search.css  Search.tsx  UserProfile.tsx
mock_oauth42/: server.py
scripts/: seed_insomnia_user.sql  seed_oauth2_client.sql
tests/: test_card01.py  test_card02.py  test_card03.py  test_card04.py  test_card05.py  test_card06.py  test_card07.py  test_card08.py  test_card09.py  test_card10.py  test_card11.py  test_card12.py  test_card13.py  test_card14.py  test_card15.py  test_card16.py  test_card17.py
