[project]
name = "hypertube-tests"
version = "0.1.0"
description = "Tests for Hypertube XP Cards"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3",
    "requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
verbose = true

[dependency-groups]
dev = [
    "pytest>=8.3",
    "requests>=2.32",
]
