[package]
name = "hypertube"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypertube"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
infer = "0.16"

[profile.release]
opt-level = "s"
strip = true
