[package]
name = "hypertube"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypertube"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
infer = "0.16"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder"] }

[profile.release]
opt-level = "s"
strip = true
